--- a/index.html
+++ b/index.html
@@ -737,37 +737,37 @@
               <p class="lang lang-ar">"ساعدنا على خدمتك بشكل أفضل"</p>
 
          <form name="contact"  method="POST" netlify>
-  <p>
+  <p class="lang lang-en">
     <!-- <label>Name: <input type="text" class="form-control" name="name" /></label> -->
-     <input type="text" name="name" class="form-control lang lang-en" placeholder="Your Name" required="" />
+     <input type="text" name="name" class="form-control" placeholder="Your Name" required="" />
   </p>
-  <p>
+  <p class="lang lang-ar">
     <!-- <label>Name: <input type="text" class="form-control" name="name" /></label> -->
-                    <input type="text" name="name" class="form-control lang lang-ar" placeholder="اسمك" required="" />
+                    <input type="text" name="name" class="form-control" placeholder="اسمك" required="" />
   </p>
-  <p>
+  <p class="lang lang-en">
     <!-- <label>Email: <input type="email" class="form-control" name="email" /></label> -->
-      <input type="email" class="form-control lang lang-en" name="email" placeholder="Your Email" required="" />
+      <input type="email" class="form-control" name="email" placeholder="Your Email" required="" />
   </p>
-  <p>
+  <p class="lang lang-ar">
     <!-- <label>Email: <input type="email" class="form-control" name="email" /></label> -->
-                    <input type="email" class="form-control lang lang-ar" name="email" placeholder="بريدك الإلكتروني" required="" />
+                    <input type="email" class="form-control" name="email" placeholder="بريدك الإلكتروني" required="" />
   </p>
-  <p>
+  <p class="lang lang-en">
     <!-- <label>Subject: <input type="text" class="form-control" name="subject" /></label> -->
-     <input type="text" class="form-control lang lang-en" name="subject" placeholder="Subject" required="" />
+     <input type="text" class="form-control" name="subject" placeholder="Subject" required="" />
   </p>
-  <p>
+  <p class="lang lang-ar">
     <!-- <label>Subject: <input type="text" class="form-control" name="subject" /></label> -->
-                    <input type="text" class="form-control lang lang-ar" name="subject" placeholder="موضوع" required="" />
+                    <input type="text" class="form-control" name="subject" placeholder="موضوع" required="" />
   </p>
-  <p>
+  <p class="lang lang-en">
     <!-- <label>Message: <textarea name="message" class="form-control"></textarea></label> -->
-     <textarea class="form-control lang lang-en" name="message" rows="6" placeholder="Message" required="" ></textarea>
+     <textarea class="form-control" name="message" rows="6" placeholder="Message" required="" ></textarea>
   </p>
-  <p>
+  <p class="lang lang-ar">
     <!-- <label>Message: <textarea name="message" class="form-control"></textarea></label> -->
-                    <textarea class="form-control lang lang-ar" name="message" rows="6" placeholder="رسالة" required=""></textarea>
+                    <textarea class="form-control" name="message" rows="6" placeholder="رسالة" required=""></textarea>
   </p>
   <p>
     <button type="submit" class="btn btn-success"><i class="fa fa-paper-plane"></i></button>
