--- a/index.html
+++ b/index.html
@@ -736,38 +736,35 @@
               <p class="lang lang-en">“Help us to serve you better"</p>
               <p class="lang lang-ar">"ساعدنا على خدمتك بشكل أفضل"</p>
 
-         <form name="contact"  method="POST" netlify>
-  <p class="lang lang-en">
-    <!-- <label>Name: <input type="text" class="form-control" name="name" /></label> -->
-     <input type="text" name="name" class="form-control" placeholder="Your Name" required="" />
+         <form name="contact"  method="POST" class="lang lang-en" netlify>
+  <p>
+    <label>Name: <input type="text" class="form-control" name="name" /></label>
   </p>
-  <p class="lang lang-ar">
-    <!-- <label>Name: <input type="text" class="form-control" name="name" /></label> -->
-                    <input type="text" name="name" class="form-control" placeholder="اسمك" required="" />
+  <p>
+    <label>Email: <input type="email" class="form-control" name="email" /></label>
   </p>
-  <p class="lang lang-en">
-    <!-- <label>Email: <input type="email" class="form-control" name="email" /></label> -->
-      <input type="email" class="form-control" name="email" placeholder="Your Email" required="" />
+  <p>
+    <label>Subject: <input type="text" class="form-control" name="subject" /></label>
   </p>
-  <p class="lang lang-ar">
-    <!-- <label>Email: <input type="email" class="form-control" name="email" /></label> -->
-                    <input type="email" class="form-control" name="email" placeholder="بريدك الإلكتروني" required="" />
+  <p>
+    <label>Message: <textarea name="message" class="form-control"></textarea></label>
   </p>
-  <p class="lang lang-en">
-    <!-- <label>Subject: <input type="text" class="form-control" name="subject" /></label> -->
-     <input type="text" class="form-control" name="subject" placeholder="Subject" required="" />
+  <p>
+    <button type="submit" class="btn btn-success"><i class="fa fa-paper-plane"></i></button>
   </p>
-  <p class="lang lang-ar">
-    <!-- <label>Subject: <input type="text" class="form-control" name="subject" /></label> -->
-                    <input type="text" class="form-control" name="subject" placeholder="موضوع" required="" />
+</form>
+         <form name="contact" class="lang lang-ar" method="POST" netlify>
+  <p>
+    <label>موضوع: <input type="text" class="form-control" name="name" /></label>
   </p>
-  <p class="lang lang-en">
-    <!-- <label>Message: <textarea name="message" class="form-control"></textarea></label> -->
-     <textarea class="form-control" name="message" rows="6" placeholder="Message" required="" ></textarea>
+  <p>
+    <label>موضوع: <input type="email" class="form-control" name="email" /></label>
   </p>
-  <p class="lang lang-ar">
-    <!-- <label>Message: <textarea name="message" class="form-control"></textarea></label> -->
-                    <textarea class="form-control" name="message" rows="6" placeholder="رسالة" required=""></textarea>
+  <p>
+    <label>موضوع: <input type="text" class="form-control" name="subject" /></label>
+  </p>
+  <p>
+    <label>موضوع: <textarea name="message" class="form-control"></textarea></label>
   </p>
   <p>
     <button type="submit" class="btn btn-success"><i class="fa fa-paper-plane"></i></button>
