aba chai bhayo hola sayad

--- a/index.html
+++ b/index.html
@@ -813,16 +813,16 @@
               <form name="contact-en" method="POST" class="lang lang-en" netlify accept-charset="UTF-8">
                 <input type="hidden" name="form-name" value="contact-en" />
                 <p>
-                  <label>Name: <input type="text" class="form-control" name="name" /></label>
+                  <label>Name: <input type="text" class="form-control" name="name-en" /></label>
                 </p>
                 <p>
-                  <label>Email: <input type="email" class="form-control" name="email" /></label>
+                  <label>Email: <input type="email" class="form-control" name="email-en" /></label>
                 </p>
                 <p>
-                  <label>Subject: <input type="text" class="form-control" name="subject" /></label>
+                  <label>Subject: <input type="text" class="form-control" name="subject-en" /></label>
                 </p>
                 <p>
-                  <label>Message: <textarea name="message" class="form-control"></textarea></label>
+                  <label>Message: <textarea name="message-en" class="form-control"></textarea></label>
                 </p>
                 <p>
                   <button type="submit" class="btn btn-success"><i class="fa fa-paper-plane"></i></button>
@@ -832,16 +832,16 @@
               <form name="contact-ar" method="POST" class="lang lang-ar" netlify accept-charset="UTF-8">
                 <input type="hidden" name="form-name" value="contact-ar" />
                 <p>
-                  <label>موضوع: <input type="text" class="form-control" name="name" /></label>
+                  <label>موضوع: <input type="text" class="form-control" name="name-ar" /></label>
                 </p>
                 <p>
-                  <label>البريد الإلكتروني: <input type="email" class="form-control" name="email" /></label>
+                  <label>البريد الإلكتروني: <input type="email" class="form-control" name="email-ar" /></label>
                 </p>
                 <p>
-                  <label>الموضوع: <input type="text" class="form-control" name="subject" /></label>
+                  <label>الموضوع: <input type="text" class="form-control" name="subject-ar" /></label>
                 </p>
                 <p>
-                  <label>الرسالة: <textarea name="message" class="form-control"></textarea></label>
+                  <label>الرسالة: <textarea name="message-ar" class="form-control"></textarea></label>
                 </p>
                 <p>
                   <button type="submit" class="btn btn-success"><i class="fa fa-paper-plane"></i></button>
