--- a/index.html
+++ b/index.html
@@ -832,16 +832,16 @@
               <form name="contact-ar" method="POST" class="lang lang-ar" netlify accept-charset="UTF-8">
                 <input type="hidden" name="form-name" value="contact-ar" />
                 <p>
-                  <label>موضوع: <input type="text" class="form-control" name="name-ar" /></label>
+                  <label>اسم:<input type="text" class="form-control" name="name-ar" /></label>
                 </p>
                 <p>
-                  <label>البريد الإلكتروني: <input type="email" class="form-control" name="email-ar" /></label>
+                  <label>بريد إلكتروني :<input type="email" class="form-control" name="email-ar" /></label>
                 </p>
                 <p>
-                  <label>الموضوع: <input type="text" class="form-control" name="subject-ar" /></label>
+                  <label>موضوع :<input type="text" class="form-control" name="subject-ar" /></label>
                 </p>
                 <p>
-                  <label>الرسالة: <textarea name="message-ar" class="form-control"></textarea></label>
+                  <label>رسالة :<textarea name="message-ar" class="form-control"></textarea></label>
                 </p>
                 <p>
                   <button type="submit" class="btn btn-success"><i class="fa fa-paper-plane"></i></button>
