--- a/index.html
+++ b/index.html
@@ -634,17 +634,17 @@
 
     <!-- Faq Section -->
     <section id="faq" class="faq section">
+      <div class="content px-xl-5" id="faq-content" data-aos="fade-up" data-aos-delay="100">
 
+        <h3 class="lang lang-en">Frequently Asked Questions</h3>
+        <h3 class="lang lang-ar">الأسئلة الشائعة</h3>
+
+      </div>
       <div class="container">
 
         <div class="row gy-4">
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="content px-xl-5">
-              <h3 class="lang lang-en">Frequently Asked Questions</h3>
-              <h3 class="lang lang-ar">الأسئلة الشائعة</h3>
-
-            </div>
           </div>
 
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
@@ -784,7 +784,7 @@
                 <div class="content">
                   <h4 class="lang lang-en">Phone Number</h4>
                   <h4 class="lang lang-ar">رقم التليفون</h4>
-                  <p><a href="callto:+966505282955">+966505282955</a></p>
+                  <p><a href="callto:0505282955">0505282955</a></p>
                   <p></p>
                 </div>
               </div>
@@ -803,7 +803,7 @@
             </div>
           </div>
 
-          <div class="col-lg-7">
+          <div class="col-lg-5">
             <div class="contact-form" data-aos="fade-up" data-aos-delay="300">
               <h3 class="lang lang-en">Feedback</h3>
               <h3 class="lang lang-ar">تعليق</h3>
@@ -879,12 +879,19 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4 class="lang lang-en">Useful Links</h4>
           <h4 class="lang lang-ar">روابط مفيدة</h4>
-          <ul>
+          <ul class="lang lang-en">
             <li><i class="bi bi-chevron-right"></i> <a href="#hero">Home</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#about">About us</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#branches">Branches</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#services">Services</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#portfolio">Gallery</a></li>
+          </ul>
+          <ul class="lang lang-ar">
+            <li><i class="bi bi-chevron-left"></i> <a href="#hero">الصفحة الرئيسية</a></li>
+            <li><i class="bi bi-chevron-left"></i> <a href="#about">معلومات عنا</a></li>
+            <li><i class="bi bi-chevron-left"></i> <a href="#branches">الفروع</a></li>
+            <li><i class="bi bi-chevron-left"></i> <a href="#services">خدمات</a></li>
+            <li><i class="bi bi-chevron-left"></i> <a href="#portfolio">معرض الصور</a></li>
           </ul>
         </div>
 
