--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
-        <img src="assets/img/round-logo.png" alt="">
+        <img src="assets/img/round-logo.png" alt="" >
         <h1 class="navbar-brand lang lang-en"><span>&nbsp; Watam </span>Auto Glass</h1>
         <h1 class="navbar-brand lang lang-ar active"><span>&nbsp;وتم</span> لزجاج السيارات</h1>
       </a>
@@ -56,7 +56,7 @@
           </li>
           <li class="nav-item">
             <a href="#about" class="nav-link lang lang-en">About</a>
-            <a href="#about" class="nav-link lang lang-ar">الرئيسية</a>
+            <a href="#about" class="nav-link lang lang-ar">عن الشركة</a>
           </li>
           <li class="nav-item">
             <a href="#branches" class="nav-link lang lang-en">Branches</a>
@@ -64,15 +64,15 @@
           </li>
           <li class="nav-item">
             <a href="#services" class="nav-link lang lang-en">Services</a>
-            <a href="#services" class="nav-link lang lang-ar">اتصل </a>
+            <a href="#services" class="nav-link lang lang-ar">خدماتنا </a>
           </li>
           <li class="nav-item">
             <a href="#portfolio" class="nav-link lang lang-en">Gallery</a>
-            <a href="#portfolio" class="nav-link lang lang-ar">اتصل </a>
+            <a href="#portfolio" class="nav-link lang lang-ar">اعمالنا </a>
           </li>
           <li class="nav-item">
             <a href="#contact" class="nav-link lang lang-en">Contact</a>
-            <a href="#contact" class="nav-link lang lang-ar"> بنا</a>
+            <a href="#contact" class="nav-link lang lang-ar"> تواصل معنا</a>
           </li>
           <li class="nav-item">
             <a href="#" onclick="myFunction()"><i class="bi bi-brightness-high"></i>
@@ -108,9 +108,9 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2 class="lang lang-en">About</h2>
-        <h2 class="lang lang-ar">عن</h2>
-        <p class="lang lang-en">One of the top providers of automotive glass installation and maintenance services.</p>
-        <p class="lang lang-ar">أحد أبرز مقدمي خدمات تركيب وصيانة زجاج السيارات.</p>
+        <h2 class="lang lang-ar">عن الشركة</h2>
+        <p class="lang lang-en">A Saudi based company specialized in automotive glass installation and maintenance services.</p>
+        <p class="lang lang-ar">شركة سعودية متخصصة في خدمات تركيب وصيانة زجاج السيارات.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -119,7 +119,7 @@
 
           <div class="col-xl-5" data-aos="fade-up" data-aos-delay="200">
             <h2 class="lang lang-en">Overview</h2>
-            <h2 class="lang lang-ar">ملخص</h2>
+            <h2 class="lang lang-ar">لمحة</h2>
             <p class="lang lang-en">In 2020, the idea of establishing service centers for installation and
               maintenance of automotive glass was born. That marked the beginning of our journey of research and
               study in the field of automotive glass. In early 2021, we met with several experts in this field
@@ -132,36 +132,39 @@
               precise
               and impactful brand call: Watam with precision. </p>
 
-            <p class="lang lang-ar">في عام ٢٠٢٠، وُلدت فكرة إنشاء مراكز خدمة لتركيب وصيانة زجاج السيارات. وكانت تلك
-              بداية رحلتنا البحثية والدراسية في مجال زجاج السيارات. في مطلع عام ٢٠٢١، التقينا بالعديد من الخبراء في هذا
-              المجال، وزرنا عددًا من المصانع والموردين، واطلعنا على العديد من الدراسات والتقارير حول تطورات هذه الصناعة
-              محليًا وعالميًا. وبحلول منتصف عام ٢٠٢١، بدأنا بوضع خطة شاملة، وبدأنا رحلة اختيار اسم العلامة التجارية.
-              حرصنا على اختيار اسم عربي، مما دفعنا إلى فكرة "وطم"، اسم يجمع بين البساطة والوضوح، ويعكس هوية الشركة،
-              وينسجم مع رؤيتنا. "وطم" مشتق من الفعل الماضي "تم" بمعنى "أكمل"، وهو أيضًا بمثابة نداء علامة تجارية دقيق
-              ومؤثر: وطم بدقة.</p>
+            <p class="lang lang-ar">
+رحلـة الـدراســــة والبحـث في مجـال زجـاج الســــیـارات وفي أوائـل عـام 2021 قمنـا بمقـابلـة عـدد من
+الخبراء في ھذا المجال وزرنا عدد من المصـــانع والموردین كما قمنا بقراءة العدید من الدراســـات
+والتقاریر حول تطورات ھذا المجال في الســـوق المحلي والعالمي، وفي منتصـــف عام 2021 بدأنا
+ً
+على تطویر خطة شــاملة وبدأت رحلة اختیار الاســم التجاري وكنا حریصــون على ان یكون اســما
+عربیا ویعكس ھویة الشــركة ،ً ثم جاءت فكرة (وتم) وكان ھذا اســم یجمع بین البســاطة والوضــوح
+ً نداء العلامة ھو (وتم بكل دقة)
+ٍ ویلائم رؤیتنا، فـ (وتم) ماض لفعل تم لیكون أیضا
+فكان افتتاح أول مراكزنا في تاریخ 2022/1/1</p>
 
             <div class="row feature-list-wrapper">
               <div class="col-md-6">
                 <ul class="feature-list">
                   <li>
-                    <p class="lang lang-en"><i class="bi bi-check-circle-fill"></i>Precision</p>
-                    <p class="lang lang-ar"><i class="bi bi-check-circle-fill"></i>دقة</p>
+                    <p class="lang lang-en"><i class="bi bi-check-circle-fill"></i> Precision</p>
+                    <p class="lang lang-ar"><i class="bi bi-check-circle-fill"></i>الدقة </p>
                   </li>
                   <li>
-                    <p class="lang lang-en"><i class="bi bi-check-circle-fill"></i>Efficiency</p>
-                    <p class="lang lang-ar"><i class="bi bi-check-circle-fill"></i>كفاءة</p>
+                    <p class="lang lang-en"><i class="bi bi-check-circle-fill"></i> Efficiency</p>
+                    <p class="lang lang-ar"><i class="bi bi-check-circle-fill"></i>الكفاءة </p>
                   </li>
                 </ul>
               </div>
               <div class="col-md-6">
                 <ul class="feature-list">
                   <li>
-                    <p class="lang lang-en"><i class="bi bi-check-circle-fill"></i>Quality</p>
-                    <p class="lang lang-ar"><i class="bi bi-check-circle-fill"></i>جودة</p>
+                    <p class="lang lang-en"><i class="bi bi-check-circle-fill"></i> Quality</p>
+                    <p class="lang lang-ar"><i class="bi bi-check-circle-fill"></i>الجودة </p>
                   </li>
                   <li>
-                    <p class="lang lang-en"><i class="bi bi-check-circle-fill"></i>Compliance</p>
-                    <p class="lang lang-ar"><i class="bi bi-check-circle-fill"></i>امتثال</p>
+                    <p class="lang lang-en"><i class="bi bi-check-circle-fill"></i> Compliance</p>
+                    <p class="lang lang-ar"><i class="bi bi-check-circle-fill"></i>الامتثال </p>
                   </li>
                 </ul>
               </div>
@@ -198,15 +201,14 @@
         <div class="stats-hero row align-items-center mb-5">
           <div class="col-lg-7 mb-4 mb-lg-0" data-aos="fade-right" data-aos-delay="200">
             <h3 class="headline mb-3 lang lang-en">Our Mission</h3>
-            <h3 class="headline mb-3 lang lang-ar">مهمتنا</h3>
+            <h3 class="headline mb-3 lang lang-ar">مھمتنا</h3>
             <p class="lead lang lang-en">To build customer trust and expand our services across all regions of our
               country. We aim to establish
               long-term relationships with our customers through commitment, quality, and staying up to date with
               technological
               advancements in the automotive glass field.
-            </p>
-            <p class="lang lang-ar">بناء ثقة عملائنا وتوسيع نطاق خدماتنا في جميع أنحاء بلدنا. نهدف إلى بناء علاقات طويلة
-              الأمد معهم من خلال الالتزام والجودة ومواكبة أحدث التطورات التكنولوجية في مجال زجاج السيارات.</p>
+            </p>تعزیز ثقة العملاء والتوسع لتقدیم خدماتنا في كل مناطق ربوع بلادنا وبناء علاقة طویلة الأمد مع
+عملائنا من خلال الالتزام والجودة ومواكبة التطورات التقنیة في مجال زجاج السیارات.</p>
           </div>
           <div class="col-lg-5 text-lg-end text-center" data-aos="zoom-in" data-aos-delay="300">
             <div class="stats-rating d-inline-flex align-items-center py-3 px-4 shadow-sm">
@@ -223,7 +225,8 @@
                     <i class="bi bi-star-half"></i>
                   </span>
                 </div>
-                <div class="user-feedback small">Based on 781+ user reviews</div>
+                <div class="user-feedback small lang lang-en">Based on 781+ user reviews</div>
+                <div class="user-feedback small lang lang-ar">استنادًا إلى 781+ تقييمات المستخدمين</div>
               </div>
             </div>
           </div>
@@ -245,7 +248,8 @@
                 <span data-purecounter-start="0" data-purecounter-end="9" data-purecounter-duration="1.5"
                   class="purecounter"></span>
               </div>
-              <small class="label">Branches</small>
+              <small class="label lang lang-en">Branches</small>
+              <small class="label lang lang-ar">الفروع</small>
             </article>
           </div>
           <div class="col-6 col-md-3" data-aos="fade-up" data-aos-delay="300">
@@ -263,7 +267,8 @@
                 <span data-purecounter-start="0" data-purecounter-end="99.96" data-purecounter-duration="1.5"
                   class="purecounter"></span>%
               </div>
-              <small class="label">Customer Satisfaction</small>
+              <small class="label lang lang-en">Customer Satisfaction</small>
+              <small class="label lang lang-ar">رضا العملاء</small>
             </article>
           </div>
         </div><!-- End stats counters -->
@@ -572,7 +577,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
                 <a href="assets/img/branches/b1.jpg" data-portfolio="portfolio-portfolio-app" class="glightbox"><img
-                    src="assets/img/branches/b1.jpg" class="img-fluid" alt=""></a>
+                    src="assets/img/branches/b1.jpg" class="img-fluid" alt="" loading="lazy"></a>
                 <div class="portfolio-info">
                 </div>
               </div>
@@ -581,7 +586,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
                 <a href="assets/img/working/w1.jpg" data-portfolio="portfolio-portfolio-app" class="glightbox"><img
-                    src="assets/img/working/w1.jpg" class="img-fluid" alt=""></a>
+                    src="assets/img/working/w1.jpg" class="img-fluid" alt="" loading="lazy"></a>
                 <div class="portfolio-info">
                 </div>
               </div>
@@ -590,7 +595,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
                 <a href="assets/img/branches/b2.jpg" data-portfolio="portfolio-portfolio-app" class="glightbox"><img
-                    src="assets/img/branches/b2.jpg" class="img-fluid" alt=""></a>
+                    src="assets/img/branches/b2.jpg" class="img-fluid" alt="" loading="lazy"></a>
                 <div class="portfolio-info">
                 </div>
               </div>
@@ -599,7 +604,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
                 <a href="assets/img/working/w2.jpg" data-portfolio="portfolio-portfolio-app" class="glightbox"><img
-                    src="assets/img/working/w2.jpg" class="img-fluid" alt=""></a>
+                    src="assets/img/working/w2.jpg" class="img-fluid" alt="" loading="lazy"></a>
                 <div class="portfolio-info">
                 </div>
               </div>
@@ -887,11 +892,11 @@
             <li><i class="bi bi-chevron-right"></i> <a href="#portfolio">Gallery</a></li>
           </ul>
           <ul class="lang lang-ar">
-            <li><i class="bi bi-chevron-left"></i> <a href="#hero">الصفحة الرئيسية</a></li>
-            <li><i class="bi bi-chevron-left"></i> <a href="#about">معلومات عنا</a></li>
+            <li><i class="bi bi-chevron-left"></i> <a href="#hero">الرئيسية</a></li>
+            <li><i class="bi bi-chevron-left"></i> <a href="#about">عن الشركة</a></li>
             <li><i class="bi bi-chevron-left"></i> <a href="#branches">الفروع</a></li>
-            <li><i class="bi bi-chevron-left"></i> <a href="#services">خدمات</a></li>
-            <li><i class="bi bi-chevron-left"></i> <a href="#portfolio">معرض الصور</a></li>
+            <li><i class="bi bi-chevron-left"></i> <a href="#services">خدماتنا</a></li>
+            <li><i class="bi bi-chevron-left"></i> <a href="#portfolio">اعمالنا</a></li>
           </ul>
         </div>
 
