--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
-        <img src="assets/img/round-logo.png" alt="" >
+        <img src="assets/img/round-logo.png" alt="">
         <h1 class="navbar-brand lang lang-en"><span>&nbsp; Watam </span>Auto Glass</h1>
         <h1 class="navbar-brand lang lang-ar active"><span>&nbsp;وتم</span> لزجاج السيارات</h1>
       </a>
@@ -109,7 +109,8 @@
       <div class="container section-title" data-aos="fade-up">
         <h2 class="lang lang-en">About</h2>
         <h2 class="lang lang-ar">عن الشركة</h2>
-        <p class="lang lang-en">A Saudi based company specialized in automotive glass installation and maintenance services.</p>
+        <p class="lang lang-en">A Saudi based company specialized in automotive glass installation and maintenance
+          services.</p>
         <p class="lang lang-ar">شركة سعودية متخصصة في خدمات تركيب وصيانة زجاج السيارات.</p>
       </div><!-- End Section Title -->
 
@@ -133,15 +134,15 @@
               and impactful brand call: Watam with precision. </p>
 
             <p class="lang lang-ar">
-رحلـة الـدراســــة والبحـث في مجـال زجـاج الســــیـارات وفي أوائـل عـام 2021 قمنـا بمقـابلـة عـدد من
-الخبراء في ھذا المجال وزرنا عدد من المصـــانع والموردین كما قمنا بقراءة العدید من الدراســـات
-والتقاریر حول تطورات ھذا المجال في الســـوق المحلي والعالمي، وفي منتصـــف عام 2021 بدأنا
-ً
-على تطویر خطة شــاملة وبدأت رحلة اختیار الاســم التجاري وكنا حریصــون على ان یكون اســما
-عربیا ویعكس ھویة الشــركة ،ً ثم جاءت فكرة (وتم) وكان ھذا اســم یجمع بین البســاطة والوضــوح
-ً نداء العلامة ھو (وتم بكل دقة)
-ٍ ویلائم رؤیتنا، فـ (وتم) ماض لفعل تم لیكون أیضا
-فكان افتتاح أول مراكزنا في تاریخ 2022/1/1</p>
+              رحلـة الـدراســــة والبحـث في مجـال زجـاج الســــیـارات وفي أوائـل عـام 2021 قمنـا بمقـابلـة عـدد من
+              الخبراء في ھذا المجال وزرنا عدد من المصـــانع والموردین كما قمنا بقراءة العدید من الدراســـات
+              والتقاریر حول تطورات ھذا المجال في الســـوق المحلي والعالمي، وفي منتصـــف عام 2021 بدأنا
+              ً
+              على تطویر خطة شــاملة وبدأت رحلة اختیار الاســم التجاري وكنا حریصــون على ان یكون اســما
+              عربیا ویعكس ھویة الشــركة ،ً ثم جاءت فكرة (وتم) وكان ھذا اســم یجمع بین البســاطة والوضــوح
+              ً نداء العلامة ھو (وتم بكل دقة)
+              ٍ ویلائم رؤیتنا، فـ (وتم) ماض لفعل تم لیكون أیضا
+              فكان افتتاح أول مراكزنا في تاریخ 2022/1/1</p>
 
             <div class="row feature-list-wrapper">
               <div class="col-md-6">
@@ -208,7 +209,7 @@
               technological
               advancements in the automotive glass field.
             </p>تعزیز ثقة العملاء والتوسع لتقدیم خدماتنا في كل مناطق ربوع بلادنا وبناء علاقة طویلة الأمد مع
-عملائنا من خلال الالتزام والجودة ومواكبة التطورات التقنیة في مجال زجاج السیارات.</p>
+            عملائنا من خلال الالتزام والجودة ومواكبة التطورات التقنیة في مجال زجاج السیارات.</p>
           </div>
           <div class="col-lg-5 text-lg-end text-center" data-aos="zoom-in" data-aos-delay="300">
             <div class="stats-rating d-inline-flex align-items-center py-3 px-4 shadow-sm">
@@ -875,8 +876,9 @@
             <span class="sitename lang lang-ar">وتم لزجاج السيارات</span>
           </a>
 
+
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d906.1443997102604!2d46.83857016062161!3d24.707043166361053!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2fa9c212ed6adf%3A0xf8ba1922da4e9d1d!2sAl%20Salem%20Autoglass!5e0!3m2!1sen!2ssa!4v1755089296397!5m2!1sen!2ssa"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3622.855864323035!2d46.8057784!3d24.7661306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2f01000829f5f3%3A0x1b5452f606f7c90d!2z2YjYqtmFINmE2LLYrNin2Kwg2KfZhNiz2YrYp9ix2KfYqiBXYXRhbSBBdXRvIEdsYXNzIChXMDYp!5e0!3m2!1sar!2ssa!4v1755683117249!5m2!1sar!2ssa"
             width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
