--- a/index.html
+++ b/index.html
@@ -207,8 +207,9 @@
               country. We aim to establish
               long-term relationships with our customers through commitment, quality, and staying up to date with
               technological
-              advancements in the automotive glass field.
-            </p>تعزیز ثقة العملاء والتوسع لتقدیم خدماتنا في كل مناطق ربوع بلادنا وبناء علاقة طویلة الأمد مع
+              advancements in the automotive glass field.</p>
+              <p class="lang lang-ar">
+              تعزیز ثقة العملاء والتوسع لتقدیم خدماتنا في كل مناطق ربوع بلادنا وبناء علاقة طویلة الأمد مع
             عملائنا من خلال الالتزام والجودة ومواكبة التطورات التقنیة في مجال زجاج السیارات.</p>
           </div>
           <div class="col-lg-5 text-lg-end text-center" data-aos="zoom-in" data-aos-delay="300">
