--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
-        <img src="assets/img/round-logo.png" alt="">
+        <img src="assets/img/logo.png" alt="">
         <h1 class="navbar-brand lang lang-en"><span>&nbsp; Watam </span>Auto Glass</h1>
         <h1 class="navbar-brand lang lang-ar active"><span>&nbsp;وتم</span> لزجاج السيارات</h1>
       </a>
@@ -208,9 +208,9 @@
               long-term relationships with our customers through commitment, quality, and staying up to date with
               technological
               advancements in the automotive glass field.</p>
-              <p class="lang lang-ar">
+            <p class="lang lang-ar">
               تعزیز ثقة العملاء والتوسع لتقدیم خدماتنا في كل مناطق ربوع بلادنا وبناء علاقة طویلة الأمد مع
-            عملائنا من خلال الالتزام والجودة ومواكبة التطورات التقنیة في مجال زجاج السیارات.</p>
+              عملائنا من خلال الالتزام والجودة ومواكبة التطورات التقنیة في مجال زجاج السیارات.</p>
           </div>
           <div class="col-lg-5 text-lg-end text-center" data-aos="zoom-in" data-aos-delay="300">
             <div class="stats-rating d-inline-flex align-items-center py-3 px-4 shadow-sm">
@@ -558,7 +558,6 @@
       </div><!-- End Section Title -->
 
       <div class="container">
-
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
           <ul class="portfolio-filters isotope-filters lang lang-en" data-aos="fade-up" data-aos-delay="100">
@@ -578,8 +577,8 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <a href="assets/img/branches/b1.jpg" data-portfolio="portfolio-portfolio-app" class="glightbox"><img
-                    src="assets/img/branches/b1.jpg" class="img-fluid" alt="" loading="lazy"></a>
+                <a href="assets/img/branches/b4.jpg" data-portfolio="portfolio-portfolio-app" class="glightbox"><img
+                    src="assets/img/branches/b4.jpg" class="img-fluid" alt="" loading="lazy"></a>
                 <div class="portfolio-info">
                 </div>
               </div>
@@ -596,8 +595,8 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <a href="assets/img/branches/b2.jpg" data-portfolio="portfolio-portfolio-app" class="glightbox"><img
-                    src="assets/img/branches/b2.jpg" class="img-fluid" alt="" loading="lazy"></a>
+                <a href="assets/img/about/4.jpg" data-portfolio="portfolio-portfolio-app" class="glightbox"><img
+                    src="assets/img/about/4.jpg" class="img-fluid" alt="" loading="lazy"></a>
                 <div class="portfolio-info">
                 </div>
               </div>
@@ -614,8 +613,8 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <a href="assets/img/branches/b3.jpg" data-portfolio="portfolio-portfolio-app" class="glightbox"><img
-                    src="assets/img/branches/b3.jpg" class="img-fluid" alt=""></a>
+                <a href="assets/img/about/1.jpg" data-portfolio="portfolio-portfolio-app" class="glightbox"><img
+                    src="assets/img/about/1.jpg" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
                 </div>
               </div>
@@ -791,7 +790,8 @@
                 <div class="content">
                   <h4 class="lang lang-en">Phone Number</h4>
                   <h4 class="lang lang-ar">رقم التليفون</h4>
-                  <p><a href="callto:0505282955">0505282955</a></p>
+                  <p class="lang lang-en"><a href="callto:+966 505 282 955">+966 505 282 955</a></p>
+                  <p class="lang lang-ar"><a href="callto:955 282 505 966+">955 282 505 966+</a></p>
                   <p></p>
                 </div>
               </div>
@@ -803,8 +803,7 @@
                 <div class="content">
                   <h4 class="lang lang-en">Email Address</h4>
                   <h4 class="lang lang-ar">عنوان البريد الإلكتروني</h4>
-                  <p><a href="mailto:watamglass@gmail.com">watamglass@gmail.com</a></p>
-                  <p><a href="mailto:support@watamglass.com">support@watamglass.com</a></p>
+                  <p><a href="mailto:info@watamglass.com">info@watamglass.com</a></p>
                 </div>
               </div>
             </div>
